CSS/index.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
}

header {
    position: relative;
    width: 100%;
    height: 400px;

}

main {
    position: relative;
    width: 100%;
    height: calc(100% - 600px);
    overflow: scroll;
}

footer {
    position: relative;
    background-color: gray;
    width: 100%;
    height: 200px;
}

/* header elements */

#logo-container {
    height: 100%;
    width: 100%;

}

#logo {
    left: 50%;
    top: 10%;
    transform: translate(-50%);
    position: relative;
    height: 100%;
}


/* main elements */

#main-container {
    display: grid;
    width: 100%;
    height: 100%;
    grid-template-rows: 1fr 3fr 1fr;
    justify-items: center;

}

#hello-container {
    width: 100%;
    height: 100%;
    font-size: 3.5em;
    text-align: left;
    margin-left: 5%;
    margin-top: 100px;
}

/* input containers*/

#destination-container {
    font-size: 50px;
    display: grid;
    grid-template-rows: 1fr 0.5fr 1fr 1fr;
    justify-items: center;
    align-content: center;
    width: 80%;
}

.Destination-Input {
    border: none;
    border-bottom: 10px solid #00957a;
    background-color: rgb(200,200,200);
    width: 100%;
    height: 100px;
    font-size: 50px;
}

.input-container {
    width: 100%;
}

#from-input-container {
    grid-row: 1;
}

#to-input-container {
    grid-row: 3;
}

#route-button-container {

}

#route_button {
    position: relative;
    width: 50%;
    left: 50%;
    transform: translate(-50%);
    transition: 0.1s;
}

#route_button:active {
    opacity: 0.6;
}

